# StreamlitLab

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/streamlitlab/: app.py
src/streamlitlab/utils/: config.py
tests/: test_app.py  test_config.py  test_logging.py
