[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlitlab"
version = "0.1.0"
description = "A Streamlit playground for experimentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

# Tell hatchling where to find the package (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/streamlitlab"]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["streamlitlab"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
